# social-website

./: main.py  pyproject.toml
bookmarks/: cert.crt  cert.key  db.sqlite3
bookmarks/account/: admin.py  authentication.py  forms.py  models.py  urls.py  views.py
bookmarks/account/migrations/: 0001_initial.py  0002_alter_profile_photo_contact.py
bookmarks/account/templates/: base.html
bookmarks/account/templates/account/: dashboard.html  login.html
bookmarks/account/templates/account/user/: list.html
bookmarks/account/templates/registration/: login.html  password_change_form.html
bookmarks/actions/: models.py  utils.py
bookmarks/actions/migrations/: 0001_initial.py
bookmarks/bookmarks/: settings.py  urls.py
bookmarks/images/: forms.py  models.py  signals.py  urls.py  views.py
bookmarks/images/migrations/: 0001_initial.py  0002_rename_user_like_image_users_like.py  0003_image_total_likes_and_more.py
bookmarks/images/templates/images/image/: detail.html  ranking.html
