[project]
name = "social"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2",
    "django-extensions==3.2.3",
    "pillow>=11.2.1",
    "pyopenssl==24.1.0",
    "python-decouple==3.8",
    "requests==2.31.0",
    "social-auth-app-django==5.4.0",
    "werkzeug==3.0.2",
]
