[project]
name = "social"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2",
    "django-debug-toolbar==4.3.0",
    "django-extensions==3.2.3",
    "easy-thumbnails>=2.10",
    "pillow>=11.2.1",
    "pyopenssl==24.1.0",
    "python-decouple==3.8",
    "redis==5.0.4",
    "requests==2.31.0",
    "social-auth-app-django==5.4.0",
    "werkzeug==3.0.2",
]
